[project]
name = "fused-local"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Gabe Joseph", email = "gjoseph92@gmail.com" }
]
dependencies = [
    "rio-tiler>=6.6.1",
    "rio-viz>=0.12.2",
    "pystac-client>=0.8.2",
    "planetary-computer>=1.0.0",
    "numpy>=1.26.4",
    "xarray>=2024.5.0",
    "attrs>=23.2.0",
    "odc-geo>=0.4.5",
    "morecantile>=5.3.0",
    "fastapi>=0.111.0",
    "pydantic>=2.7.2",
    "hypercorn>=0.17.3",
    "odc-stac>=0.3.9",
    "geocube>=0.5.2",
    "stackstac[viz]>=0.5.0",
    "matplotlib>=3.9.0",
    "diskcache>=5.6.3",
    "cryptography>=42.0.8",
    "watchfiles>=0.22.0",
    "trio>=0.25.1",
    "websockets>=12.0",
    "anyio>=4.4.0",
    "uvicorn[standard]>=0.30.1",
    "gunicorn>=22.0.0",
    "sse-starlette>=2.1.0",
    "cloudpickle>=3.0.0",
    "geopy>=2.4.1",
    "trio-parallel>=1.2.2",
    "typer>=0.12.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
fused-local = "fused_local.serve:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython>=8.25.0",
    "jupyterlab>=4.2.1",
    "py-spy>=0.3.14",
    "pytest>=8.2.2",
]

[tool.rye.scripts]
build_ts = "python src/fused_local/models.py js/generated/models.ts"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fused_local"]
